signup,login,home work together

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,3 +2,11 @@
     background-color: plum;
     margin: 0px;
 }
+#nostuff{
+    background-color: plum;
+    margin: 0px;
+}
+#yourstuff{
+    background-color: plum;
+    margin: 0px;
+}
