--- a/src/helpers/Post.css
+++ b/src/helpers/Post.css
@@ -10,12 +10,15 @@
   max-height: 100px;
   min-width: 0px;
   min-height: 0px;
-  border: 1px solid rgb(242, 225, 192);
+  border: 1px solid #f2e1c0;
 }
 #link{
   background-color: #448665;
   border: 1px solid black;
+  color: #dbedd9;
   padding: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
   width: max-content;
   display:block;
   margin: 0 auto;
@@ -24,5 +27,43 @@
   margin-left: 5px;
 }
 #caption{
-  background-color: rgb(188, 213, 184);
+  background-color: #bcd5b8;
+}
+#mypostrow{
+  height: 92%;
+  width: inherit;
+  margin: auto;
+  padding: 0px;
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll; 
+}
+#mypostrow::-webkit-scrollbar {
+  display: none;
+}
+#myPostCont{
+  width: 100%;
+  height: fit-content;
+  background-color: #599075;
+  padding: 0px;
+  border: 2px solid #464d45;
+}
+#myDays{
+  margin: auto;
+  text-align: center;
+  width: 100%; 
+  background-color:#464d45;
+  padding: 0px;
+}
+#myImg{
+  max-width: inherit;
+  max-height: 80px;
+  min-width: 0px;
+  min-height: 0px;
+  border: 1px solid #f2e1c0;
+}
+#myCaption{
+  background-color: #bcd5b8;
+  font-size: smaller;
+  border-radius: 3px;
 }
