--- a/src/helpers/Post.css
+++ b/src/helpers/Post.css
@@ -11,6 +11,7 @@
   min-width: 0px;
   min-height: 0px;
   border: 1px solid #f2e1c0;
+  border-radius: 2px;
 }
 #link{
   background-color: #448665;
@@ -20,15 +21,42 @@
   padding-left: 5px;
   padding-right: 5px;
   width: max-content;
-  display:block;
-  margin: 0 auto;
-}
-#poster{
   margin-left: 5px;
+  margin-bottom: 10px;
+  font-size: 90%;
+}
+#userLink{
+  background: none;
+  border: none;
+  font-weight: bold;
+  padding: 0px;
+  padding-left:2px;
+  padding-right:5px;
 }
 #caption{
   background-color: #bcd5b8;
+  border-radius: 3px;
+  margin-left:2px;
+  padding: 3px;
+  margin-bottom: 5px;
 }
+#followBut{
+  width:max-content;
+  height: min-content;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-right: 4px;
+  padding-left: 4px;
+  margin-top: 3px;
+  margin-left: 3px;
+  background-color: #448665;
+  border: 1px solid black;
+  border-radius: 7px;
+  color: #dbedd9;
+  font-size: small;
+}
+
+
 #mypostrow{
   height: 92%;
   width: inherit;
@@ -61,9 +89,46 @@
   min-width: 0px;
   min-height: 0px;
   border: 1px solid #f2e1c0;
+  border-radius: 2px;
 }
 #myCaption{
   background-color: #bcd5b8;
   font-size: smaller;
   border-radius: 3px;
+}
+#myLink{
+  padding: 8px;
+  padding-top: 0px;
+  padding-bottom: 2px;
+  margin-left: 7px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  background-color: #448665;
+  border: 1px solid black;
+  color: #dbedd9;
+}
+
+#comments{
+  background-color: #bcd5b8;
+  border-radius: 2px;
+  margin-left:2px;
+  padding: 2px;
+  margin-top: 0px;
+  margin-bottom: 7px;
+}
+#commentBut{
+  background-color: #448665;
+  border: 1px solid black;
+  border-radius: 3px;
+  color: #dbedd9;
+  padding: 2px;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: max-content;
+}
+#commentInput{
+  min-width: 80%; 
+  min-height: 50px;
+  background-color: #dfecdc;
+  border: 1px solid #464d45;
 }
