--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -15,6 +15,15 @@
   padding-bottom: 2px;
   margin-left: 10px;
 }
+#nvmBut{
+  background-color: #699E84;
+  border-color: black;
+  color: #dbedd9;
+  padding: 8px;
+  padding-top: 0px;
+  padding-bottom: 2px;
+  margin-left: 10px;
+}
 #pubProCaption{
   background-color: #bcd5b8;
   margin-left:2px;
@@ -43,4 +52,52 @@
   border-radius: 2px;
   margin-bottom: 3px;
   margin-top: 10px;
+}
+
+#editBioInput{
+  min-width: 90%; 
+  min-height: 50px;
+  background-color: #dfecdc;
+  border: 1px solid #464d45;
+}
+#newBioBut{
+  width:max-content;
+  height: min-content;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-right: 4px;
+  padding-left: 4px;
+  margin-top: 3px;
+  margin-left: 3px;
+  background-color: #448665;
+  border: 1px solid black;
+  border-radius: 7px;
+  color: #dbedd9;
+  font-size: small;
+}
+#editNameInput{
+  margin-left: 7px;
+  width: max-content;
+  min-width: 50px;
+  height: 30px;
+}
+
+#fileInput{
+  margin-left: 5px;
+  max-width: 90%;
+  min-width: 20px;
+  padding: 2px;
+  height: max-content;
+  font-size: smaller;
+}
+#fileUpload{
+  background-color: #315c47;
+  border: 1px solid black;
+  color: #dbedd9;
+  border-radius: 3px;
+  padding: 8px;
+  padding-top: 0px;
+  padding-bottom: 2px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
