--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -5,6 +5,25 @@
   padding: 5px;
   border-bottom: 1px solid black;
 }
+#profImg{
+  max-width: 50%;
+  max-height: max-content;
+  min-width: 0px;
+  min-height: 0px;
+  border: 1px solid #f2e1c0;
+  border-radius: 10px;
+  padding: 0px;
+  margin: 0 auto;
+}
+#profBio{
+  background-color: #bcd5b8;
+  font-size: smaller;
+  border-radius: 3px;
+  max-height: 100%;
+  min-height: min-content;
+  padding: 2px;
+ 
+}
 
 #editBut{
   background-color: #315c47;
@@ -76,8 +95,8 @@
   font-size: small;
 }
 #editNameInput{
-  margin-left: 7px;
   width: max-content;
+  max-width: 90%;
   min-width: 50px;
   height: 30px;
 }
