--- a/src/helpers/Post.css
+++ b/src/helpers/Post.css
@@ -1,9 +1,10 @@
 #postCont{
   width: 100%;
   height: fit-content;
-  background-color: #699E84;
-  padding: 5px;
-  border-bottom: 1px solid black;
+  background-color: #ffffff;
+  padding: 0px;
+  margin: 0 auto;
+  border-bottom: 2px solid black;
 }
 #postImg{
   max-width: inherit;
@@ -14,9 +15,21 @@
   border-radius: 2px;
 }
 #link{
-  background-color: #448665;
+  background-color: #e497ff;
   border: 1px solid black;
-  color: #dbedd9;
+  color: black;
+  padding: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
+  width: max-content;
+  margin-left: 5px;
+  margin-bottom: 10px;
+  font-size: 90%;
+}
+#openlink{
+  background-color: #2297ff;
+  border: 1px solid black;
+  color: black;
   padding: 2px;
   padding-left: 5px;
   padding-right: 5px;
@@ -34,7 +47,7 @@
   padding-right:5px;
 }
 #caption{
-  background-color: #bcd5b8;
+  background-color: #ffffff;
   border-radius: 3px;
   margin-left:2px;
   padding: 3px;
@@ -49,7 +62,7 @@
   padding-left: 4px;
   margin-top: 3px;
   margin-left: 3px;
-  background-color: #448665;
+  background-color: #2297ff;
   border: 1px solid black;
   border-radius: 7px;
   color: #dbedd9;
@@ -72,15 +85,24 @@
 #myPostCont{
   width: 100%;
   height: fit-content;
-  background-color: #599075;
+  background-color: #e497ff;
   padding: 0px;
-  border: 2px solid #464d45;
+  border-bottom: 2px solid black;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+}
+#days{
+  margin: 0 auto;
+  text-align: center;
+  width: 100%; 
+  background-color: #ffffff;
+  padding: 0px;
 }
 #myDays{
   margin: auto;
   text-align: center;
   width: 100%; 
-  background-color:#464d45;
+  background-color: #e497ff;
   padding: 0px;
 }
 #myImg{
@@ -92,7 +114,7 @@
   border-radius: 2px;
 }
 #myCaption{
-  background-color: #bcd5b8;
+  background-color: #ffffff;
   font-size: smaller;
   border-radius: 3px;
 }
@@ -103,21 +125,22 @@
   margin-left: 7px;
   margin-top: 3px;
   margin-bottom: 3px;
-  background-color: #448665;
+  background-color: #2297ff;
   border: 1px solid black;
-  color: #dbedd9;
+  color: black;
 }
 
 #comments{
-  background-color: #bcd5b8;
+  background-color: #ffffff;
   border-radius: 2px;
-  margin-left:2px;
+  margin-left:5px;
+  margin-right: 5px;
   padding: 2px;
   margin-top: 0px;
   margin-bottom: 7px;
 }
 #commentBut{
-  background-color: #448665;
+  background-color: #2297ff;
   border: 1px solid black;
   border-radius: 3px;
   color: #dbedd9;
@@ -129,7 +152,8 @@
 #commentInput{
   min-width: 80%; 
   min-height: 50px;
-  background-color: #dfecdc;
+  background-color: #ffffff;
   color: black;
-  border: 1px solid #464d45;
+  border: 2px solid black;
+  border-radius: 4px;
 }
