--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -193,5 +193,9 @@
     background-color: #e497ff;
     border: 2px solid black;
     color: black;
-    
+}
+
+li span{
+    position: relative;
+    left: -3px;
 }
