--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -34,6 +34,15 @@
   padding-bottom: 1px;
   margin-left: 0px;
 }
+#changePicBut{
+  background-color: #2297ff;
+  border-color: black;
+  color: black;
+  padding: 8px;
+  padding-top: 0px;
+  padding-bottom: 2px;
+  margin-left: 6px;
+}
 #doneBut{
   background-color: #2297ff;
   border-color: black;
@@ -81,9 +90,13 @@
   margin-bottom: 3px;
   margin-top: 10px;
 }
-
+#editNameInput{
+  width: max-content;
+  width: 90%;
+  height: 30px;
+}
 #editBioInput{
-  min-width: 90%; 
+  width: 90%; 
   min-height: 50px;
   background-color: #ffffff;
   border: 1px solid black;
@@ -101,12 +114,6 @@
   border: 1px solid black;
   border-radius: 7px;
   font-size: small;
-}
-#editNameInput{
-  width: max-content;
-  max-width: 90%;
-  min-width: 50px;
-  height: 30px;
 }
 
 #fileInput{
