--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -166,6 +166,7 @@
 #switchBut{
     background-color: #e497ff;
     border: 2px solid black;
+    font-size: 110%;
     color: black;
     border-radius: 2px;
     padding: 10px;
@@ -184,18 +185,113 @@
     border: 2px solid black;
     color: black;
 }
-#newUserInput{
-    width: 55%;
-    height: min-content;
-    padding-left: 5px;
-    margin-left: 5px;
-    margin-top: 10px;
-    background-color: #e497ff;
-    border: 2px solid black;
-    color: black;
-}
 
 li span{
     position: relative;
     left: -3px;
+}
+
+
+#topLoginCircle{
+    margin-bottom: 0 auto;
+    text-align: center;
+    background-color: #ffffff;
+    width: 65%;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-top-left-radius: 60%;
+    border-top-right-radius: 60%;
+    border-top: #090004 3px dashed; 
+    border-left: #090004 4px dashed;
+    border-right: #090004 2px dashed;
+    
+}
+#bottomLoginCircle{
+    margin: 0 auto;
+    text-align: center;
+    background-color: #ffffff;
+    width: 70%;
+    height: max-content;
+    padding-top: 5vh;
+    padding-bottom: 6vh;
+    border-bottom-left-radius: 60%;
+    border-bottom-right-radius: 60%;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    border-right: #090004 4px dashed;
+    border-left: #090004 2px dashed;
+    border-bottom: #090004 3px dashed;
+
+}
+#loginInput{
+    width: 85%;
+    margin:auto;
+    font-size: 150%;
+    color: black;
+    text-align: center;
+    background-color: #ffffff;
+    font-stretch: narrower;
+    border: #e497ff;
+}
+#loginHeader{
+    margin: 0px;
+    text-align: center;
+}
+
+#loginBut{
+    background-color: #2297ff;
+    border: 3px solid black;
+    color: black;
+    border-radius: 4px;
+    padding: 10px;
+    padding-top: 0px;
+    padding-bottom: 2px;
+    margin-top: 15px;
+    margin-bottom: 25px;
+    font-size: 140%;
+}
+
+#newUserInput{
+    width: 85%;
+    margin:auto;
+    font-size: 150%;
+    color: black;
+    text-align: center;
+    background-color: #ffffff;
+    font-stretch: narrower;
+    border: #e497ff;
+}
+#topNewUserCircle{
+    margin-bottom: 0 auto;
+    text-align: center;
+    background-color: #ffffff;
+    width: 65%;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-top-left-radius: 60%;
+    border-top-right-radius: 60%;
+    border-top: #090004 3px dashed; 
+    border-left: #090004 2px dashed;
+    border-right: #090004 4px dashed;
+    
+}
+#middleNewUserCircle{
+    margin: 0 auto;
+    text-align: center;
+    background-color: #ffffff;
+    width: 70%;
+    height: max-content;
+    padding-top: 5vh;
+    padding-bottom: 6vh;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    border-left: #090004 4px dashed;
+    border-right: #090004 2px dashed;
+
 }
