fixed myposts and about css

--- a/src/helpers/Post.css
+++ b/src/helpers/Post.css
@@ -73,7 +73,7 @@
 #mypostrow{
   height: 92%;
   width: inherit;
-  margin: auto;
+  margin: 0 auto;
   padding: 0px;
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
   scrollbar-width: none; /* for Firefox */
